--- a/mobile/app.json
+++ b/mobile/app.json
@@ -13,7 +13,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -25,7 +25,7 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "ecoleta.do.thiago",
+      "package": "com.rocketseat.ecoleta",
       "versionCode": 1
     }
   }
